// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Promo content matches snapshot and element 1`] = `
<p
  className="nhsuk-promo__description"
  style={Object {}}
>
  Hello
</p>
`;

exports[`Promo heading matches snapshot and element 1`] = `
<h3
  className="nhsuk-promo__heading"
  style={Object {}}
>
  Hello
</h3>
`;

exports[`Promo matches snapshot 1`] = `
<div
  className="nhsuk-promo"
  style={Object {}}
>
  <a
    className="nhsuk-promo__link-wrapper"
    href="#"
  >
    <div
      className="nhsuk-promo__content"
    >
      Child
    </div>
  </a>
</div>
`;

exports[`PromoGroup matches snapshot 1`] = `
<div
  className="nhsuk-grid-row nhsuk-promo-group"
  style={Object {}}
>
  <div
    className="nhsuk-grid-column-full nhsuk-promo-group__item"
    key=".0"
  >
    <h1>
      Child
    </h1>
  </div>
</div>
`;
